--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-check my code: <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -98,7 +98,7 @@ check my code: <!DOCTYPE html>
               taskItem.appendChild(deleteButton);
 
               taskList.appendChild(taskItem);
-              taskInput.value = " "; // syöttökenttä
+              taskInput.value = " "; // 
           }
       }
       addTaskButton.addEventListener("click", addTask);
