--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               taskItem.appendChild(deleteButton);
 
               taskList.appendChild(taskItem);
-              taskInput.value = " "; // 
+              taskInput.value = " "; 
           }
       }
       addTaskButton.addEventListener("click", addTask);
